# internal/application/sys/router/menu.go
@@ -1,0 +1,24 @@
+package router
+
+import (
+	jwt "github.com/appleboy/gin-jwt/v2"
+	"github.com/gin-gonic/gin"
+	"github.com/xiaodulala/admin-layout/internal/application/sys/apis"
+)
+
+func init() {
+	routerCheckRole = append(routerCheckRole, registerSysMenuRouter)
+}
+
+func registerSysMenuRouter(g *gin.RouterGroup, authMiddleware *jwt.GinJWTMiddleware) {
+	api := apis.SysMenu{}
+	r := g.Group("/menu")
+	{
+		r.GET("", api.GetPage)
+		r.GET("/:id", api.Get)
+		r.POST("", api.Insert)
+		r.PUT("", api.Update)
+		r.DELETE("", api.Delete)
+		r.GET("/menu-role", api.GetMenuRole)
+	}
+}
