# internal/application/sys/router/post.go
@@ -1,0 +1,23 @@
+package router
+
+import (
+	jwt "github.com/appleboy/gin-jwt/v2"
+	"github.com/gin-gonic/gin"
+	"github.com/xiaodulala/admin-layout/internal/application/sys/apis"
+)
+
+func init() {
+	routerCheckRole = append(routerCheckRole, registerSysPostRouter)
+}
+
+func registerSysPostRouter(g *gin.RouterGroup, authMiddleware *jwt.GinJWTMiddleware) {
+	api := apis.SysPost{}
+	r := g.Group("/post")
+	{
+		r.GET("", api.GetPage)
+		r.GET("/:id", api.Get)
+		r.POST("", api.Insert)
+		r.PUT("", api.Update)
+		r.DELETE("", api.Delete)
+	}
+}
